small spacing fix

--- a/site.css
+++ b/site.css
@@ -91,7 +91,7 @@ small {
 
 .nav li a {
   display: block;
-  padding: 15px 12px;
+  padding: 15px 12px 13px;
   color: #757575;
   text-decoration: none;
 }
